@@ -29,14 +29,14 @@ SHA256 e043510c72044f82f28f57f409db9a31c5c087429a5304c4ad535afeab2f4273 files/te
 DIST texlive-basicbin-2007.tar.bz2 9135714 RMD160 14748132f4901eb3ba8ea09d6aabba1be7af1510 SHA1 44d6d2f731a3990bbdf349359cf858859f5422ec SHA256 a046d1c96682a82453382e8593cf88667215b6518fd38604dad31cd6e2e663af
 DIST texlive-binextra-2007.tar.bz2 548576 RMD160 5be5a7ad38c8fb0fb45666f3b252f82703caf3fe SHA1 9b9e33c5a4d00a6065bb7fab555bba6824c1823f SHA256 71979822da8b4f8ed2e062e0411dc612b08f65f5fec612c310226dbdb20fe6c3
 DIST texlive-core-2007.tar.bz2 31078286 RMD160 496cb3fa3c5cd9b2ea5da3b0bced67a2b5afe7b9 SHA1 37286f7b962c18ec5234071a8d2dde1499d9ab71 SHA256 96c12147ea9717539553eb6b3be52c2df6163ca617dccc71282ccd39c2e5773b
-EBUILD texlive-core-2007.ebuild 5604 RMD160 2582280300169e14fc547c6fddf69742cc0d5244 SHA1 5f290d504fd1946971b07f0dcf05df425d1ab69e SHA256 a40e0b9f35b487091f1b1062f5b740b0f3bb7625f5580b71ed8ff06f426a718f
-MD5 99f2f817962d88e1b2186e0370a44f5e texlive-core-2007.ebuild 5604
-RMD160 2582280300169e14fc547c6fddf69742cc0d5244 texlive-core-2007.ebuild 5604
-SHA256 a40e0b9f35b487091f1b1062f5b740b0f3bb7625f5580b71ed8ff06f426a718f texlive-core-2007.ebuild 5604
-MISC ChangeLog 2922 RMD160 9a9c1eca97d23d91c568cbc843c8f413b53e6822 SHA1 58b0f049897102952ac8eb7cd408dcb224e5f450 SHA256 08c64a4cce540c3f926647b698ba9c6925b49a0842ee9b9704ec5fa2d7cf1fed
-MD5 8be77ff55d6e1d8074b4647badff2387 ChangeLog 2922
-RMD160 9a9c1eca97d23d91c568cbc843c8f413b53e6822 ChangeLog 2922
-SHA256 08c64a4cce540c3f926647b698ba9c6925b49a0842ee9b9704ec5fa2d7cf1fed ChangeLog 2922
+EBUILD texlive-core-2007.ebuild 5573 RMD160 9624bf93e5d1d07a8c585572fdb139f78324ada5 SHA1 6ec586b75305bb5e9fd08d6789aa1bebbcb25771 SHA256 fe4a1753709283c94043a1f608bd834e590020368ba6cce3389da25e827291c5
+MD5 59fe7b6c3a6ec71036a03c1a9d5c4d63 texlive-core-2007.ebuild 5573
+RMD160 9624bf93e5d1d07a8c585572fdb139f78324ada5 texlive-core-2007.ebuild 5573
+SHA256 fe4a1753709283c94043a1f608bd834e590020368ba6cce3389da25e827291c5 texlive-core-2007.ebuild 5573
+MISC ChangeLog 3032 RMD160 af047c7ad87a59b30534b44d65b46968a3a4b932 SHA1 45a312e7ba1561abd501aeccced98322c80c6040 SHA256 f4e97bfd6fb22fd77a86562fcc0ff8b7172e55fb7b11fb692e53e5551ed130f9
+MD5 866e7154ec970b60f80a2268a7cb4113 ChangeLog 3032
+RMD160 af047c7ad87a59b30534b44d65b46968a3a4b932 ChangeLog 3032
+SHA256 f4e97bfd6fb22fd77a86562fcc0ff8b7172e55fb7b11fb692e53e5551ed130f9 ChangeLog 3032
 MD5 194aff0f73789f487365c7a9909d7f4f files/digest-texlive-core-2007 801
 RMD160 e5efe58c039f5f166a7c43d766ced6972cfeb270 files/digest-texlive-core-2007 801
 SHA256 f2b74066c3aedc7f0f2df40c5f859c5927bc6dfb5b9848b88d0dab8860820ecf files/digest-texlive-core-2007 801
